[fix] 매입 이력 알람 리스너 문제 해결 (#438)
* refactor: 현재가 갱신 단순 스트림 방식으로 변경

* refactor: 불필요한 메서드 제거

* refactor: toArray 메서드로 분리

* feat: Flux 방식으로 변경

* fix: Mono.error 모킹 해결

* feat: 현재가 조회 부분을 반복문에서 람다로 변경

* refactor: Flux 형태로 현잭가 조회 개선

* style: 코드 정리

* style: 코드 정리

* feat: 컬렉션 필드를 불변 컬렉션으로 반환하도록 변경

PortfolioHolding 클래스의 getPurchaseHistory 메서드 같은 경우 서비스에 문제점이 있어서 todo 남김

* feat: purchaseHistory 컬렉션을 반환시 불변 컬렉션으로 반환

* fix: todo 제거

* feat: 불변 컬렉션 반환으로 인한 코드 제거

* style: 코드 정리

* style: 로깅 제거

* fix: @EnableAsync 애노테이션을 추가하여 비동기 활성화 및 이벤트 리스너의 반환 타입을 CompletableFuture로 변경

* test: PurchaseHistoryServiceTest에 있는 매입 이력 이벤트(추가/삭제)에 따른 알림 이벤트 테스트를 제거하고 리스너 테스트에 최대 손실 알림 테스트 추가

* feat: @EventListener를 @TransactionalEventListener로 변경